ecmascript/parser/tests/test262-error-references/fail/5427bdf48f3eb6d9.js.stderr
error: Invalid unciode escape
 --> $DIR/tests/test262-parser/fail/5427bdf48f3eb6d9.js:1:3
  |
1 | ('\u{2028')
  |   ^^^^^^^

